Add player 2 and Add if-else statement if they rolled a 1

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </div>
 
         <div class="col-md-6">
-          <p class="lead">Player score: <span class="score"></span></p>
+          <p class="lead">Player 1 score: <span class="playerScore1"></span></p>
+
+          <p class="lead">Player 2 score: <span class="playerScore2"></span></p>
         </div>
       </div>
     </div>
