Add if-else statement for winner equal or greater than 100

--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
         </div>
 
         <div class="col-md-6">
-          <p class="lead">Player 1 score: <span class="playerScore1"></span></p>
+          <p class="lead"><span class="playerName1"></span> score: <span class="playerScore1"></span></p>
 
-          <p class="lead">Player 2 score: <span class="playerScore2"></span></p>
+          <p class="lead"><span class="playerName2"></span> score: <span class="playerScore2"></span></p>
         </div>
+      </div>
+      <div class="gameOver">
+        <p>Game Over. <span class="winner"></span> Wins!</p>
       </div>
     </div>
   </body>
