Add if-else statement for potential points

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <h1>Pig Dice</h1>
       </div>
 
+      <p class="lead">Dice Roll: <span class="roll"></span></p>
+
       <div class="row">
 
         <div class="col-md-6">
@@ -22,6 +24,7 @@
               <div id="player1roll">
 
                 <form class="rollForm"><button type="submit">Roll die</button></form>
+                <form class="holdForm"><button type="submit">Hold</button></form>
 
               </div>
             </div>
@@ -34,15 +37,13 @@
               <span class="playerName2"></span> score: <span class="playerScore2"></span>
               <div id="player2roll">
                 <form class="rollForm"><button type="submit">Roll die</button></form>
+                <form class="holdForm"><button type="submit">Hold</button></form>
               </div>
             </div>
           </div>
         </div>
 
       </div>
-
-      <p class="lead">Dice Roll: <span class="roll"></span></p>
-      <form class="rollForm"><button type="submit">Roll die</button></form>
 
       <div class="gameOver">
         <p>Game Over. <span class="winner"></span> Wins!</p>
