add die images for each roll.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
         <h1>Pig Dice</h1>
       </div>
 
-      <p class="lead">Dice Roll: <span class="roll"></span></p>
+      <div class="row display-flex">
 
-      <div class="row">
-
-        <div class="col-md-6">
+        <div class="col-md-5">
           <div class="panel panel-default">
             <div class="panel-body text-center score">
               <span class="playerName1"></span> score: <span class="playerScore1"></span>
@@ -31,7 +29,12 @@
           </div>
         </div>
 
-        <div class="col-md-6">
+        <div class="col-md-2 die">
+
+          <!-- <p class="lead text-center">Dice Roll: <span class="roll"></span></p> -->
+        </div>
+
+        <div class="col-md-5">
           <div class="panel panel-default">
             <div class="panel-body text-center score">
               <span class="playerName2"></span> score: <span class="playerScore2"></span>
